# aoc2023

./: .ocamlformat  aoc2023.opam  day01.ml  dune  dune-project  flake.nix
day01/: day01.ml  dune
day02/: day02.ml  dune
day03/: day03.ml  dune  part2.txt
day04/: day04.ml  dune  part2.txt
day05/: day05.ml  dune  part2.txt
day06/: day06.ml  dune  part2.txt
day07/: day07.ml  dune  part2.txt
day08/: day08.ml  dune  part2.txt
day09/: day09.ml  dune  part1.txt
day10/: day10.ml  dune
day11/: day11.ml  dune
day12/: day12.ml  dune  part2.txt
day13/: day13.ml  dune
day14/: day14.ml  dune
day15/: day15.ml  dune
day16/: day16.ml  dune
day17/: day17.ml  dune
day18/: day18.ml  dune  part2.txt
day19/: day19.ml  dune  part2.txt
day20/: day20.ml  dune  part1.txt  part2.txt
day21/: day21.ml  dune  part2.txt
day22/: day22.ml  dune
day23/: day23.ml  dune
day24/: day24.ml  dune  part2.txt
day25/: day25.ml  dune
lib/: dune  lib.ml  lib.mli
