(library
 (name day01)
 (public_name aoc2023.day01)
 (modules day01)
 (libraries base stdio)
 (preprocess
  (pps ppx_jane))
 (inline_tests))

(executable
 (name run)
 (modules run)
 (libraries day01))

(rule
 (write-file run.ml "let () = Day01.run ()"))

(rule
 (with-stdout-to
  part1.txt.gen
  (run ./run.exe %{dep:input.txt})))

(rule
 (alias runtest)
 (action
  (diff part1.txt part1.txt.gen)))
