(library
 (name day17)
 (public_name aoc2023.day17)
 (modules day17)
 (libraries base core_kernel.pairing_heap lib stdio)
 (preprocess
  (pps ppx_jane))
 (inline_tests))

(executable
 (name run)
 (modules run)
 (libraries day17))

(rule
 (write-file run.ml "let () = Day17.run ()"))

(rule
 (with-stdout-to
  part1.txt.gen
  (run ./run.exe %{dep:input.txt})))

(rule
 (alias runtest)
 (action
  (diff part1.txt part1.txt.gen)))

(rule
 (with-stdout-to
  part2.txt.gen
  (run ./run.exe --2 %{dep:input.txt})))

(rule
 (alias runtest)
 (action
  (diff part2.txt part2.txt.gen)))
